--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,10 @@
-* {
+body {
     font-family: Helvetica, Arial, sans-serif;
     background-color: rgb(234, 234, 234);
   }
   
   body {
-    padding: 60px;
+    padding: 20px;
   }
   
   input {
